# molecule

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
.molecule/: auth.store
src/: args.rs  auth.rs  cli.rs  constants.rs  main.rs  molecule.rs  proto.rs  tcp.rs
src/core/: collection.rs  record.rs
