[package]
name = "molecule"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
tokio = { version = "1.48.0", features = ["full"] }
clap = { version = "4.5.53", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.28"
bcrypt = "0.17.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
